--- a/about.html
+++ b/about.html
@@ -52,9 +52,7 @@
           style="
             width: 250px;
             height: 250px;
-            border-radius: 50%;
-            border: $secondary-color 1px solid;
-          "
+            border-radius: 50%" 
           src="./images/3.jpg"
           alt="Alayna"
           class="bio-img"
